# apera-app

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  Dockerfile  README.md  apera_production.db  arxiv_cache.json  audit_log.json  chat_history.json  debug_crash.py  docker-compose.yml  evaluation_report.csv  novelty_report.csv  pyproject.toml  requirements.txt  test_novelty.py  test_pipeline.py
data/raw/: metadata.csv
src/: agent_guarded.py  agents.py  api.py  app.py  data_fetch.py  database.py  diagnose_backend.py  query.py  rag_core.py  requirements-2.txt
src/utils/: chunking.py  embed.py  pdf_parser.py
tests/: test_fetch.py
