[tool.poetry]
name = "apera-poc"
version = "0.1.0"
description = "Agentic RAG PoC for Ethical Academic Research"
authors = ["Joel John <jjohnjoel2005@gmail.com>"]
readme = "README.md"
license = "MIT"
package-mode = false

[tool.poetry.dependencies]
python = "^3.9"
llama-index = "^0.9.0"
sentence-transformers = "^2.2.2"
faiss-cpu = "1.7.4"
transformers = "^4.35.0"
torch = "^2.0.0"
pymupdf = "^1.23.0"
requests = "^2.31.0"
tqdm = "^4.66.0"
gradio = "^4.0.0"
aif360 = "^0.5.0"
ipywidgets = "^8.1.0"
pandas = "^2.0.0"
numpy = "^1.24.0"

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.0"
pytest-cov = "^4.1.0"
black = "^23.0.0"
flake8 = "^6.1.0"
isort = "^5.12.0"
radon = "^6.0.0"
pre-commit = "^3.5.0"
locust = "^2.17.0"
hypothesis = "^6.88.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 88
target-version = ['py39']

[tool.isort]
profile = "black"
line_length = 88

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"
python_functions = "test_*"
addopts = "--cov=src --cov-report=html --cov-report=term-missing"
